# thomas

./: .gitignore  CMakeLists.txt  Makefile  README.md  anvil.vcxproj  anvil.vcxproj.filters  build.bat  build_ts.bat  thomas_the_game_engine.sln
anvil/: anvil.vcxproj  main.cpp
art/: dump.aseprite  plant.aseprite  scale.aseprite
data/: telescope_core.lib
sauce/: anvil.c  anvil.cpp  anvil.h  base.h  cgame.c  main.cpp  th_array.h  th_base.h  th_base_internal.cpp  th_coroutine.h  th_dump.h  th_memory.h  th_telescope.h  thomas.h
sauce/ext/: HandmadeMath.h  cute_c2.h
